弃用设备分类关系表